Changes to add validation errors for SignUp and unit tests for login and signup endpoints
