# internal/delivery/http/v1/auth.go
@@ -24,8 +24,8 @@ func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
 // @Accept  json
 // @Produce  json
 // @Param input body service.SignupUserInput true "New user signup details"
-// @Success 200 {object} service.LoginInput
-// @Failure 400,500 {object} utils.Response
+// @Success 200 {object} service.SignupUserInput
+// @Failure 404,500 {object} utils.Response
 // @Router /auth/signup [Post]
 func (h *Handler) signupNewUser(ctx *gin.Context) {
 	var input service.SignupUserInput
@@ -36,12 +36,7 @@ func (h *Handler) signupNewUser(ctx *gin.Context) {
 	err := h.services.Users.Signup(ctx.Request.Context(), &input)
 
 	if err != nil {
-		if err == service.ErrUserAlreadyExist {
-			utils.ErrorResponse(ctx, http.StatusBadRequest, err)
-			return
-		}
-		utils.ErrorResponse(ctx, http.StatusInternalServerError, err)
-		return
+		h.handleServiceError(ctx, err)
 	}
 
 	ctx.Status(http.StatusOK)
@@ -66,13 +61,7 @@ func (h *Handler) userLogin(ctx *gin.Context) {
 	result, err := h.services.Users.Login(ctx.Request.Context(), &input)
 
 	if err != nil {
-		if err == service.ErrInvalidCredentials {
-			utils.ErrorResponse(ctx, http.StatusBadRequest, err)
-			return
-		}
-
-		utils.ErrorResponse(ctx, http.StatusInternalServerError, err)
-		return
+		h.handleServiceError(ctx, err)
 	}
 
 	up := security.UserPrincipal{UserId: result.Id, Roles: result.Roles}
